# Reasoning-Process

./: .gitignore  pyproject.toml  requirements-dev.txt
.claude/skills/: reasoning-optimizer.md
.github/workflows/: validate-docs.yml
examples/: example_bug_fix.md  example_feature_design.md
reasoning-optimizer-cskill/: README.md  skill.md
templates/: QUICK-START.md  failure-analysis-template.md  reasoning-test-suite.py  reasoning-training-template.md
tests/: __init__.py  conftest.py  test_checklist_coverage.py  test_code_examples.py  test_consistency.py  test_markdown_syntax.py
